--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="insertarcliente">/insertarcliente.php?</string>
     <string name="vercliente">/clientes.php</string>
     <string name="insertarclientepost">/Insertarclientespost.php</string>
+    <string name="verdetallecliente">detalle</string>
 </resources>
